...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/generos_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/poster_image"
        app:layout_constraintStart_toStartOf="parent"
...
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/generos_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/item_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true"
        app:layout_constraintTop_toBottomOf="@id/div_line"
...
