...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <RadioButton
            android:id="@+id/radio_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </RadioGroup>
...
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/boton_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/aceptar"
...
